tests/type_alias_param_variance/type_alias_param_variance.exp
Error: test.js:7
  7: type A<-T> = Foo<T>; // Error, Foo expects invariant type
                      ^ T. invariant position (expected `T` to occur only contravariantly)

Error: test.js:8
  8: type B<+T> = Foo<T>; // Error, Foo expects invariant type
                      ^ T. invariant position (expected `T` to occur only covariantly)

Error: test.js:10
 10: type D<-T> = Bar<T>; // Error, Bar expects covariant type
                      ^ T. covariant position (expected `T` to occur only contravariantly)

Error: test.js:15
 15: type I<+T> = Baz<T>; // Error, Baz expects contravariant type
                      ^ T. contravariant position (expected `T` to occur only covariantly)


Found 4 errors
